@@ -41,12 +41,16 @@ elseif(isset($_GET['action']) && $_GET['action'] == 'dropuser')
 }
 
 $event = $DB->GetRow('SELECT events.id AS id, title, description, note, 
-			date, begintime, endtime, customerid, private, closed, ' 
+			date, begintime, enddate, endtime, customerid, private, closed, ' 
 			.$DB->Concat('UPPER(customers.lastname)',"' '",'customers.name').' AS customername
 			FROM events LEFT JOIN customers ON (customers.id = customerid)
 			WHERE events.id = ?', array($_GET['id']));
 
 $event['date'] = sprintf('%04d/%02d/%02d', date('Y',$event['date']),date('n',$event['date']),date('j',$event['date']));
+if (empty($event['enddate']))
+	$event['enddate'] = '';
+else
+	$event['enddate'] = sprintf('%04d/%02d/%02d', date('Y',$event['enddate']),date('n',$event['enddate']),date('j',$event['enddate']));
 
 $eventuserlist = $DB->GetAll('SELECT userid AS id, users.name
 					FROM users, eventassignments
@@ -59,24 +63,35 @@ if(isset($_POST['event']))
 	$event['id'] = $_GET['id'];
 	
 	if($event['title'] == '')
-    		$error['title'] = trans('Event title is required!');
-	
-	if($event['date'] == '')
+		$error['title'] = trans('Event title is required!');
+
+	if ($event['date'] == '')
 		$error['date'] = trans('You have to specify event day!');
-	else
-	{
-		list($year,$month, $day) = explode('/',$event['date']);
-		if(!checkdate($month,$day,$year))
+	else {
+		list ($year,$month, $day) = explode('/',$event['date']);
+		if (checkdate($month, $day, $year))
+			$date = mktime(0, 0, 0, $month, $day, $year);
+		else
 			$error['date'] = trans('Incorrect date format! Enter date in YYYY/MM/DD format!');
 	}
 
-	if(!$error)
-	{
-		$date = mktime(0, 0, 0, $month, $day, $year);
+	$enddate = 0;
+	if ($event['enddate'] != '') {
+		list ($year,$month, $day) = explode('/', $event['enddate']);
+		if (checkdate($month, $day, $year))
+			$enddate = mktime(0, 0, 0, $month, $day, $year);
+		else
+			$error['enddate'] = trans('Incorrect date format! Enter date in YYYY/MM/DD format!');
+	}
+
+	if ($enddate && $date > $enddate)
+		$error['enddate'] = trans('End time must not precede start time!');
+
+	if (!$error) {
 		$event['private'] = isset($event['private']) ? 1 : 0;
 
-		$DB->Execute('UPDATE events SET title=?, description=?, date=?, begintime=?, endtime=?, private=?, note=?, customerid=? WHERE id=?',
-				array($event['title'], $event['description'], $date, $event['begintime'], $event['endtime'], $event['private'], $event['note'], $event['customerid'], $event['id']));
+		$DB->Execute('UPDATE events SET title=?, description=?, date=?, begintime=?, enddate=?, endtime=?, private=?, note=?, customerid=? WHERE id=?',
+				array($event['title'], $event['description'], $date, $event['begintime'], $enddate, $event['endtime'], $event['private'], $event['note'], $event['customerid'], $event['id']));
 				
 		if($event['user'])
 		{
